#1650: Converted GetDateTimeFormats UC to extend BasePaginatedMultipleEntitiesCommand